hide menus ideas with js

--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -99,7 +99,7 @@
 }
 
 .allmenus-display {
-  display: block;
+  display: block !important;
 }
 
 .hiding_allmenus {
@@ -124,6 +124,33 @@
   &:hover{
     border-bottom: 3px solid $blue;
   }
+}
+
+#button-displayideas {
+  z-index: 9;
+  cursor: pointer;
+  position: absolute;
+  top: 0.5vh;
+  left: 18vh;
+  border: 1px solid $blue;
+  width: 10vh;
+  padding-left: 5px;
+  padding-right: 5px;
+  text-align: right;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  color: $blue;
+  &:hover{
+    border-bottom: 3px solid $blue;
+  }
+}
+
+.ideas-menus {
+  position: relative;
+}
+
+.hide-ideas {
+  display: none;
 }
  /* menu_new */
 
