--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -79,8 +79,8 @@
 
 
   <div class="last-menus ideas-menus">
-    <h2>Les idées</h2>
-    <div class="row" data-aos="zoom-in">
+    <h2>Les idées</h2> <div id="button-displayideas"> Afficher </div>
+    <div class="row hide-ideas" data-aos="zoom-in">
       <% @allmenus.last(4).each do |m| %>
        <div class="col-xs-6 col-sm-3">
 
