--- a/app/assets/stylesheets/pages/_menu.scss
+++ b/app/assets/stylesheets/pages/_menu.scss
@@ -113,16 +113,18 @@
   position: absolute;
   top: 0.5vh;
   left: 18vh;
-  border: 1px solid $blue;
+  border: 3px solid $blue;
   width: 10vh;
   padding-left: 5px;
   padding-right: 5px;
   text-align: right;
   text-transform: uppercase;
   font-size: 0.8em;
-  color: $blue;
-  &:hover{
-    border-bottom: 3px solid $blue;
+  background-color: $blue;
+  color: white;
+  &:hover, &:active {
+    border-bottom: 3px solid $green;
+    border-right: 3px solid $green;
   }
 }
 
@@ -132,16 +134,18 @@
   position: absolute;
   top: 0.5vh;
   left: 18vh;
-  border: 1px solid $blue;
+  border: 3px solid $blue;
   width: 10vh;
   padding-left: 5px;
   padding-right: 5px;
   text-align: right;
   text-transform: uppercase;
   font-size: 0.8em;
-  color: $blue;
-  &:hover{
-    border-bottom: 3px solid $blue;
+  background-color: $blue;
+  color: white;
+  &:hover, &:active {
+    border-bottom: 3px solid $green;
+    border-right: 3px solid $green;
   }
 }
 
