--- a/app/views/repas/index.html.erb
+++ b/app/views/repas/index.html.erb
@@ -7,7 +7,13 @@
   <div class="col-xs-12 col-sm-4">
   <ul class="list-inline">
     <% @shopnone.each do |ingredient|  %>
+      <% if @menu.user == current_user %>
         <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+        <% else %>
+        <li class="ingredient-notuser">
+        <span class="todo-ingname todo-ingname-stock"><%= ingredient.name %></span><span class="todo-ingplat"> (<% if ingredient.quantity.present? %> <%= ingredient.quantity %> - <% end %><%= ingredient.plat.name %>)</span>
+      </li>
+      <% end %>
     <% end %>
   </ul>
   </div>
@@ -18,7 +24,13 @@
   <h2>Magasin Bio</h2>
   <ul class="list-inline">
     <% @shopmagbio.each do |ingredient|  %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% if @menu.user == current_user %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+        <% else %>
+        <li class="ingredient-notuser">
+        <span class="todo-ingname todo-ingname-stock"><%= ingredient.name %></span><span class="todo-ingplat"> (<% if ingredient.quantity.present? %> <%= ingredient.quantity %> - <% end %><%= ingredient.plat.name %>)</span>
+      </li>
+      <% end %>
     <% end %>
   </ul>
   <%end %>
@@ -27,7 +39,13 @@
   <h2>Marché</h2>
   <ul class="list-inline">
     <% @shopmarché.each do |ingredient|  %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% if @menu.user == current_user %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+        <% else %>
+        <li class="ingredient-notuser">
+        <span class="todo-ingname todo-ingname-stock"><%= ingredient.name %></span><span class="todo-ingplat"> (<% if ingredient.quantity.present? %> <%= ingredient.quantity %> - <% end %><%= ingredient.plat.name %>)</span>
+      </li>
+      <% end %>
     <% end %>
   </ul>
   <%end %>
@@ -38,7 +56,13 @@
   <h2>Petit commerce</h2>
   <ul class="list-inline">
     <% @shoppetitcomm.each do |ingredient|  %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% if @menu.user == current_user %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+        <% else %>
+        <li class="ingredient-notuser">
+        <span class="todo-ingname todo-ingname-stock"><%= ingredient.name %></span><span class="todo-ingplat"> (<% if ingredient.quantity.present? %> <%= ingredient.quantity %> - <% end %><%= ingredient.plat.name %>)</span>
+      </li>
+      <% end %>
     <% end %>
   </ul>
   <%end %>
@@ -56,7 +80,13 @@
   <h2>Internet</h2>
   <ul class="list-inline">
     <% @shopinternet.each do |ingredient|  %>
-      <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+      <% if @menu.user == current_user %>
+        <%= render 'ingredients/showupdate', menu: @menu, ingredient: ingredient %>
+        <% else %>
+        <li class="ingredient-notuser">
+        <span class="todo-ingname todo-ingname-stock"><%= ingredient.name %></span><span class="todo-ingplat"> (<% if ingredient.quantity.present? %> <%= ingredient.quantity %> - <% end %><%= ingredient.plat.name %>)</span>
+      </li>
+      <% end %>
     <% end %>
   </ul>
   <%end %>
@@ -65,11 +95,20 @@
 </div>
 
 <div class="links-menu ingredients-index-links">
-            <%= link_to menu_ingredients_path(@menu) do  %>
-            <div class="link-menu1">
-              <i class="fas fa-arrow-left"></i>
-              <p>RETOUR</p>
-            </div>
+    <% if @menu.user == current_user %>
+              <%= link_to menu_ingredients_path(@menu) do  %>
+                <div class="link-menu1">
+                <i class="fas fa-arrow-left"></i>
+                <p>RETOUR</p>
+              </div>
+              <% end %>
+            <% else %>
+              <%= link_to menus_path do  %>
+              <div class="link-menu1">
+                <i class="fas fa-arrow-left"></i>
+                <p>RETOUR</p>
+              </div>
+              <% end %>
             <% end %>
 
 
