add validation to datepicker form

--- a/app/assets/stylesheets/layouts/_global.scss
+++ b/app/assets/stylesheets/layouts/_global.scss
@@ -30,7 +30,7 @@ h1 {
 
 h2 {
   text-transform: uppercase;
-  text-align: right;
+  text-align: left;
   color: $dark-gray;
   font-size: 3vh;
   font-weight: bold;
