--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -5,7 +5,7 @@
   <h1>Menu</h1>
   </div>
   <div class="col-xs-6 col-md-3 title-menu">
-  <h2> <span class="semaine-menu">semaine du</span> <br> <%= @startday[2] %> / <%= @startday[1] %> / <%= @startday[0] %>  </h2>
+  <h2> <span class="semaine-menu">semaine du</span> <br> <%= @startday %> / <%= @startmonth %> / <%= @startyear %>  </h2>
 </div>
   </div>
   </div>
